--- a/ISTI_CityNavigation/ISTI_CityNavigation.csproj
+++ b/ISTI_CityNavigation/ISTI_CityNavigation.csproj
@@ -43,10 +43,29 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="ICSharpCode.SharpZipLib, Version=1.0.0.999, Culture=neutral, PublicKeyToken=1b03e6acf1164f73, processorArchitecture=MSIL">
+      <HintPath>..\packages\SharpZipLib.1.0.0\lib\net45\ICSharpCode.SharpZipLib.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="Newtonsoft.Json, Version=6.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\NickProject\Bin\Newtonsoft.Json.dll</HintPath>
+    </Reference>
+    <Reference Include="NPOI, Version=2.4.1.0, Culture=neutral, PublicKeyToken=0df73ec7942b34e1, processorArchitecture=MSIL">
+      <HintPath>..\packages\NPOI.2.4.1\lib\net45\NPOI.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="NPOI.OOXML, Version=2.4.1.0, Culture=neutral, PublicKeyToken=0df73ec7942b34e1, processorArchitecture=MSIL">
+      <HintPath>..\packages\NPOI.2.4.1\lib\net45\NPOI.OOXML.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="NPOI.OpenXml4Net, Version=2.4.1.0, Culture=neutral, PublicKeyToken=0df73ec7942b34e1, processorArchitecture=MSIL">
+      <HintPath>..\packages\NPOI.2.4.1\lib\net45\NPOI.OpenXml4Net.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="NPOI.OpenXmlFormats, Version=2.4.1.0, Culture=neutral, PublicKeyToken=0df73ec7942b34e1, processorArchitecture=MSIL">
+      <HintPath>..\packages\NPOI.2.4.1\lib\net45\NPOI.OpenXmlFormats.dll</HintPath>
+      <Private>True</Private>
     </Reference>
     <Reference Include="System.Web.DynamicData" />
     <Reference Include="System.Web.Entity" />
@@ -73,8 +92,7 @@
   <ItemGroup>
     <Content Include="bin\ISTI_CityNavigation.dll" />
     <Content Include="bin\ISTI_CityNavigation.pdb" />
-    <Content Include="bin\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.dll" />
-    <Content Include="bin\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.xml" />
+    <Content Include="bin\Newtonsoft.Json.dll" />
     <Content Include="bin\roslyn\csc.exe" />
     <Content Include="bin\roslyn\csi.exe" />
     <Content Include="bin\roslyn\Microsoft.Build.Tasks.CodeAnalysis.dll" />
@@ -173,6 +191,8 @@
     <Content Include="Manage\MemberMag.aspx" />
     <Content Include="Manage\mHandler\GetMemberInfo.aspx" />
     <Content Include="Manage\mHandler\GetMemberList.aspx" />
+    <Content Include="Manage\mHandler\ImportPopulation.aspx" />
+    <Content Include="Manage\PageImport.aspx" />
     <Content Include="Web.config">
       <SubType>Designer</SubType>
     </Content>
@@ -220,6 +240,20 @@
     <Compile Include="Manage\mHandler\GetMemberList.aspx.designer.cs">
       <DependentUpon>GetMemberList.aspx</DependentUpon>
     </Compile>
+    <Compile Include="Manage\mHandler\ImportPopulation.aspx.cs">
+      <DependentUpon>ImportPopulation.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Manage\mHandler\ImportPopulation.aspx.designer.cs">
+      <DependentUpon>ImportPopulation.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Manage\PageImport.aspx.cs">
+      <DependentUpon>PageImport.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Manage\PageImport.aspx.designer.cs">
+      <DependentUpon>PageImport.aspx</DependentUpon>
+    </Compile>
     <Compile Include="MyClass\LogInfo.cs" />
     <Compile Include="MyClass\Common.cs" />
     <Compile Include="MyClass\Member_DB.cs" />
@@ -254,6 +288,7 @@
     <Compile Include="Manage\MemberMag.aspx.designer.cs">
       <DependentUpon>MemberMag.aspx</DependentUpon>
     </Compile>
+    <Compile Include="MyClass\Population_DB.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
